--- a/public/styles.css
+++ b/public/styles.css
@@ -59,6 +59,8 @@ a:focus {
   width: 100%;
   height: 100%;
   backdrop-filter: blur(2px);
+  filter: blur(2px);
+  background-color: rgba(0, 0, 0, 0.5);
   background-color: rgba(0, 0, 0, 0.4);
   background-image: url("https://raw.githubusercontent.com/eliac7/node-openweather-proxy-server/master/public/assets/images/loading.gif");
   background-size: 3.75rem;
@@ -162,7 +164,9 @@ a:focus {
   width: 100%;
   height: 100%;
   backdrop-filter: blur(30px);
+  filter: blur(30px);
 }
+
 .release {
   display: none;
   font-size: 0.875rem;
