--- a/public/styles.css
+++ b/public/styles.css
@@ -58,8 +58,6 @@ a:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(2px);
-  filter: blur(2px);
   background-color: rgba(0, 0, 0, 0.5);
   background-color: rgba(0, 0, 0, 0.4);
   background-image: url("https://raw.githubusercontent.com/eliac7/node-openweather-proxy-server/master/public/assets/images/loading.gif");
@@ -164,8 +162,6 @@ a:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(30px);
-  filter: blur(30px);
 }
 
 .release {
@@ -294,6 +290,25 @@ table#ordersTable tbody td a:hover {
 }
 .reset-button:hover i {
   transform: rotate(-360deg);
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  .upload-box.loading::after {
+    backdrop-filter: blur(2px);
+  }
+  .upload-container::before {
+    backdrop-filter: blur(30px);
+  }
+}
+
+/* slightly transparent fallback for Firefox (not supporting backdrop-filter) */
+@supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+  .upload-box.loading::after {
+    background-color: rgba(0, 0, 0, 0.66);
+  }
+  .upload-container::before {
+    background-color: rgb(43, 42, 42);
+  }
 }
 
 @media (max-width: 992px) {
