--- a/public/styles2.css
+++ b/public/styles2.css
@@ -20,16 +20,16 @@
 
 html {
   height: 100%;
-  font-family: "Manrope", sans-serif;
   transition: all 0.5s ease;
 }
 body {
+  font-family: "Manrope", sans-serif !important;
   position: relative;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
-
+/*Background pattern*/
 .bg {
   background-image: url("./assets/images/pattern.jpg");
   background-size: 300px;
@@ -52,6 +52,28 @@ body {
   background-color: var(--background-color);
   opacity: 0.5;
 }
+/*Star on Gihtub*/
+.star {
+  background-color: #373e47;
+  color: #adbac7;
+  border-color: rgba(205, 217, 229, 0.1);
+  text-decoration: none;
+  position: relative;
+  bottom: 10px;
+  right: 10px;
+  z-index: 9999;
+  transition: all 0.5s ease;
+}
+.star svg {
+  transition: all 0.5s ease;
+}
+.star:hover {
+  color: #fff;
+}
+.star:hover svg {
+  fill: #fff;
+}
+
 /*Header*/
 header {
   min-height: 100px;
@@ -111,6 +133,16 @@ header img {
   will-change: transform;
 }
 
+.logout {
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.logout:hover {
+  box-shadow: 0 0 10px 5px #ff4c4c;
+}
+
+/*End of toggle*/
+
 .image-box {
   background-color: #fff;
   border-bottom-left-radius: 10px;
@@ -138,12 +170,13 @@ header img {
   transition: all 0.5s ease;
 }
 .login-form .loading {
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   opacity: 0;
-  height: 0px;
+  height: 100%;
   transition: all 1.5s ease;
   pointer-events: none;
 }
@@ -155,7 +188,10 @@ header img {
   width: 100%;
   height: 100%;
   background-color: var(--white-color);
+  color: var(--background-color);
+  opacity: 0.9;
   z-index: 2;
+  pointer-events: all;
 }
 
 #quote {
@@ -294,8 +330,18 @@ button:disabled {
 }
 
 /*Results*/
+.welcome-text-name-container {
+  background-color: var(--background-color);
+  padding: 5px 30px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  color: var(--white-color);
+  transition: all 0.3s ease-in-out;
+}
+
 .results-container,
-.table-container {
+.table-container,
+.bar-container {
   background-color: var(--background-color);
   transition: all 0.3s ease-in-out;
 }
@@ -314,7 +360,6 @@ table#ordersTable {
 }
 table#ordersTable tbody td {
   height: 2.8rem;
-  border-bottom: 1px solid var(--clr-light-gray);
   color: var(--white-color);
 }
 table#ordersTable tbody td:nth-child(5) {
@@ -332,10 +377,6 @@ table#ordersTable tbody td div {
   background: green;
   padding: 12px;
   cursor: pointer;
-}
-
-table#ordersTable tbody tr:last-child td {
-  border: none;
 }
 
 /*Orders*/
@@ -399,6 +440,16 @@ table#ordersTable tbody tr:last-child td {
 
 .total-tips h6 {
   color: #ff7300;
+}
+/*Map*/
+.leaflet-popup-content {
+  text-align: center;
+}
+.leaflet-popup-content p {
+  margin: 10px 0;
+}
+.leaflet-marker-icon {
+  border-radius: 50%;
 }
 
 /*Footer*/
