--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap");
 
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  a {
+    @apply text-gray-700 no-underline hover:underline;
+  }
+}
 
 html,
 body {
