FRONTEND: Fix conflict Tailwind with Mantine's CSS Responsive fixes Firefox fixes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap");
 
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
+@layer base {
   a {
     @apply text-gray-700 no-underline hover:underline;
   }
